--- a/index.css
+++ b/index.css
@@ -206,6 +206,10 @@ hr {
   width: 4%;
   margin: 100px auto;
 }
+.newreg{
+  padding-top: 40px;
+  padding-bottom: 5px;
+}
 
 a{
   color: #D5CEA3;
@@ -247,7 +251,7 @@ a:hover {
 }
 
 .intro {
-  width: 30%;
+  width: 70%;
   margin: auto;
 }
 
